Added arrow_left and arrow_right to index.html inside a div Added style to .banner-infos, with width at 96%, flexbox, justify-content, to get everything in different sides

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+    <div class="banner-infos">
+      <img src="./assets/images/arrow_left.png" alt="Image of left arrow">
+		  <p>Impressions tous formats <span>en boutique et en ligne</span></p>
+      <img src="./assets/images/arrow_right.png" alt="Image of right arrow">
+    </div>
 		<div class="dots">
 		</div>
 	</div>
