Added id #arrowLeft and #arrowRight to the arrows in index.html Select the arrows using theirs id, in script.js Added event listener with 'click' to each arrow Tested the click with console.log

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
     <div class="banner-infos">
-      <img src="./assets/images/arrow_left.png" alt="Image of left arrow">
+      <img id="arrowLeft" src="./assets/images/arrow_left.png" alt="Image of left arrow">
 		  <p>Impressions tous formats <span>en boutique et en ligne</span></p>
-      <img src="./assets/images/arrow_right.png" alt="Image of right arrow">
+      <img id="arrowRight" src="./assets/images/arrow_right.png" alt="Image of right arrow">
     </div>
 		<div class="dots">
 		</div>
